What's New in Python 2.6.4rc1
=============================

*Release date: XX-Oct-2009*

What's New in Python 2.6.3
==========================

*Release date: 02-Oct-2009*

What's New in IDLE 2.6.3rc1?
============================

*Release date: 28-Sep-2009*

- On OS X IDLE 2.6 shows two Preference menu items.  Issue6951.

- Windows: Version string for the .chm help file changed, file not being
  accessed  Patch 5783 Guilherme Polo

- Tk 8.5 Text widget requires 'wordprocessor' tabstyle attr to handle
  mixed space/tab properly. Issue 5129, patch by Guilherme Polo.

What's New in IDLE 2.6.2rc1?
============================

*Release date: 06-Apr-2009*

- Issue #3549: On MacOS the preferences menu was not present

What's New in IDLE 2.6?
=======================

*Release date: 01-Oct-2008*

- Issue #2665: On Windows, an IDLE installation upgraded from an old version
  would not start if a custom theme was defined.

- Home / Control-A toggles between left margin and end of leading white
  space.  Patch 1196903 Jeff Shute.

- Improved AutoCompleteWindow logic.  Patch 2062 Tal Einat.

- Autocompletion of filenames now support alternate separators, e.g. the
  '/' char on Windows.  Patch 2061 Tal Einat.

What's New in IDLE 2.6a1?
=========================

*Release date: 29-Feb-2008*

- Configured selection highlighting colors were ignored; updating highlighting
  in the config dialog would cause non-Python files to be colored as if they
  were Python source; improve use of ColorDelagator.  Patch 1334. Tal Einat.

- ScriptBinding event handlers weren't returning 'break'. Patch 2050, Tal Einat

- There was an error on exit if no sys.exitfunc was defined. Issue 1647.

- Could not open files in .idlerc directory if latter was hidden on Windows.
  Issue 1743, Issue 1862.

- Configure Dialog: improved layout for keybinding.  Patch 1457 Tal Einat.

- tabpage.py updated: tabbedPages.py now supports multiple dynamic rows
  of tabs.  Patch 1612746 Tal Einat.
